Adding wallust config

--- a/wallust/wallust-hyprland.conf
+++ b/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(131314)
-$foreground = rgb(D7D9D4)
-$color0 = rgb(3A3A3C)
-$color1 = rgb(0E0D12)
-$color2 = rgb(0E0E12)
-$color3 = rgb(0E0E12)
-$color4 = rgb(622E22)
-$color5 = rgb(A4532F)
-$color6 = rgb(696E64)
-$color7 = rgb(BDC0BA)
-$color8 = rgb(848682)
-$color9 = rgb(131218)
-$color10 = rgb(131218)
-$color11 = rgb(131218)
-$color12 = rgb(823D2D)
-$color13 = rgb(DA6F3F)
-$color14 = rgb(8C9285)
-$color15 = rgb(BDC0BA)
+$background = rgb(201B1F)
+$foreground = rgb(F9F7FB)
+$color0 = rgb(474146)
+$color1 = rgb(221426)
+$color2 = rgb(213650)
+$color3 = rgb(742446)
+$color4 = rgb(205E81)
+$color5 = rgb(20698E)
+$color6 = rgb(B2AFB7)
+$color7 = rgb(EEECF1)
+$color8 = rgb(A6A5A9)
+$color9 = rgb(2D1B33)
+$color10 = rgb(2C486B)
+$color11 = rgb(9B305E)
+$color12 = rgb(2B7DAB)
+$color13 = rgb(2B8CBE)
+$color14 = rgb(EDE9F4)
+$color15 = rgb(EEECF1)
