--- a/UserConfigs/Startup_Apps.conf
+++ b/UserConfigs/Startup_Apps.conf
@@ -20,7 +20,7 @@ exec-once = swww-daemon --format xrgb
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-exec-once = bash -lc 'bash /home/skilari/gestures.txt'
+exec-once = bash -lc 'bash /home/skilari/.config/hypr/UserScripts/gestures.txt'
 # Polkit (Polkit Gnome / KDE)
 exec-once = $scriptsDir/Polkit.sh
 
