Update README and modified keybind to toggle Opacity ON/OFF

--- a/UserConfigs/UserKeybinds.conf
+++ b/UserConfigs/UserKeybinds.conf
@@ -60,7 +60,7 @@ bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music using r
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
 #bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagick
 bind = CTRL SHIFT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
-bind = $mainMod , O, exec, hyprctl setprop active opaque toggle # disable opacity on active window
+bind = CTRL SHIFT, O, exec, hyprctl setprop active opaque toggle # disable opacity on active window
 bind = $mainMod SHIFT, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
 bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
 bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
